# P2-ETF-LIQUID-NEURAL-ODE

./: .gitignore  DATASET_CARD.md  Makefile  README.md  __init__.py  app.py  backtester.py  callbacks.py  closed_form.py  combined_universe.toml  config.py  conftest.py  dataset.py  equity_universe.toml  evaluate.py  export_onnx.py  extended_universe.toml  fi_universe.toml  infer_daily.py  loader.py  logging_utils.py  loss.py  ltc_cell.py  ltc_config.toml  ltc_model.py  main.py  metrics.py  ncp_wiring.py  preprocessor.py  publisher.py  pyproject.toml  ranker.py  regime_score.py  requirements-dev.txt  requirements.txt  run_engine.sh  scheduler.py  score_writer.py  seed.py  setup.cfg  (+15 more)
.github/workflows/: ci.yml  daily_infer.yml  train_cpu.yml
