[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.backends.legacy:build"

[project]
name = "p2-etf-liquid-neural-ode"
version = "1.0.0"
description = "P2Quant Liquid Time-Constant Network ETF ranking engine"
readme = "README.md"
requires-python = ">=3.10"
license = { text = "MIT" }
authors = [{ name = "P2SAMAPA" }]

dependencies = [
    "torch>=2.1.0",
    "torchdiffeq==0.2.3",
    "ncps==0.0.7",
    "PyWavelets==1.4.1",
    "pandas>=2.0.0",
    "numpy>=1.24.0",
    "scikit-learn>=1.3.0",
    "scipy>=1.11.0",
    "huggingface_hub>=0.20.0",
    "datasets>=2.14.0",
    "pydantic>=2.0.0",
    "pydantic-settings>=2.0.0",
    "tomllib>=1.0.0; python_version < '3.11'",
    "rich>=13.0.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.4.0",
    "pytest-cov>=4.1.0",
    "black>=23.0.0",
    "ruff>=0.1.0",
    "mypy>=1.5.0",
    "hypothesis>=6.80.0",
]
notebooks = [
    "jupyter>=1.0.0",
    "matplotlib>=3.7.0",
    "seaborn>=0.12.0",
    "plotly>=5.15.0",
]
wandb = [
    "wandb>=0.15.0",
]

[project.scripts]
ltc-train   = "main:cli_train"
ltc-infer   = "main:cli_infer"
ltc-eval    = "main:cli_eval"

[tool.setuptools.packages.find]
where = ["."]

[tool.black]
line-length = 100
target-version = ["py310", "py311", "py312"]

[tool.ruff]
line-length = 100

[tool.ruff.lint]
select = ["E", "F", "W", "I", "N"]
ignore = ["E501"]

[tool.mypy]
python_version = "3.10"
warn_return_any = true
warn_unused_configs = true
ignore_missing_imports = true

[tool.pytest.ini_options]
testpaths = ["."]
python_files = ["test_*.py"]
python_classes = ["Test*"]
python_functions = ["test_*"]
addopts = "-v --tb=short"
