[metadata]
name = p2-etf-liquid-neural-ode
version = 1.0.0
description = P2Quant Liquid Time-Constant Network ETF ranking engine
long_description = file: README.md
long_description_content_type = text/markdown
author = P2SAMAPA
license = MIT
python_requires = >=3.10

[options]
packages = find:
include_package_data = True

[options.packages.find]
where = .

[flake8]
max-line-length = 100
extend-ignore = E203, E501
